Update recipe date format and add patch to MultipleSelector>Badges

--- a/src/tw/input.css
+++ b/src/tw/input.css
@@ -45,11 +45,15 @@ div[data-state="open"][aria-hidden="true"][data-aria-hidden="true"] {
 }
 
 div[cmdk-list][role="listbox"] {
-  @apply bg-blueish-300 max-h-32 text-def-100 rounded-sm border-def-200;
+  @apply bg-blueish-300 max-h-52 text-def-100 rounded-sm border-def-200;
 }
 
 div[cmdk-item][role="option"] {
   @apply text-def-100 opacity-100 hover:bg-blueish-200 py-[3px] focus:bg-blueish-200 focus-visible:bg-blueish-200 pointer-events-auto focus-within:bg-blueish-200 ;
+}
+
+div[data-border="true"] {
+  @apply outline-blueish-100;
 }
 
 button[data-action="badge-button-remove"] {
@@ -64,16 +68,22 @@ input[cmdk-input][role="combobox"]{
   @apply bg-blueish-300 text-def-100 min-w-[38rem];
 }
 
-div[data-badge="mounted"]{
+div[data-badge="outline"]{
   @apply bg-def-500 select-none;
 
 }
+
 
 .translate-center  {
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
+}
 
+.translate-center-t40 {
+  transform: translate(-50%, -50%);
+  top: 40%;
+  left: 50%;
 }
 
 .first-layer {
