--- a/src/tw/output.css
+++ b/src/tw/output.css
@@ -716,6 +716,10 @@ video {
   margin-top: 2rem;
 }
 
+.mr-1{
+  margin-right: 0.25rem;
+}
+
 .flex{
   display: flex;
 }
@@ -1003,6 +1007,10 @@ video {
   border-radius: 0.125rem;
 }
 
+.rounded-full{
+  border-radius: 9999px;
+}
+
 .rounded-br-lg{
   border-bottom-right-radius: 0.5rem;
 }
@@ -1065,6 +1073,11 @@ video {
   border-color: transparent;
 }
 
+.border-blue-500{
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+}
+
 .bg-black\/80{
   background-color: rgb(0 0 0 / 0.8);
 }
@@ -1073,12 +1086,12 @@ video {
   background-color: #495778FF;
 }
 
-.bg-blueish-300\/95{
-  background-color: rgb(58 66 84 / 0.95);
-}
-
 .bg-blueish-400{
   background-color: #282C34FF;
+}
+
+.bg-card-500{
+  background-color: rgb(58 66 84 / 0.95);
 }
 
 .bg-def-300{
@@ -1100,22 +1113,6 @@ video {
 
 .bg-white\/10{
   background-color: rgb(255 255 255 / 0.1);
-}
-
-.bg-card-500{
-  background-color: rgb(58 66 84 / 0.95);
-}
-
-.bg-blueish-50{
-  background-color: #7A85BBFF;
-}
-
-.bg-blueish-100{
-  background-color: #54669DFF;
-}
-
-.bg-blueish-300{
-  background-color: #3A4254FF;
 }
 
 .fill-current{
@@ -1144,6 +1141,10 @@ video {
 
 .p-6{
   padding: 1.5rem;
+}
+
+.p-\[1px\]{
+  padding: 1px;
 }
 
 .px-2{
@@ -1351,6 +1352,18 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-2xl{
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-inner{
+  --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .outline-none{
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1449,7 +1462,7 @@ div[data-state="open"][aria-hidden="true"][data-aria-hidden="true"]{
 }
 
 div[cmdk-list][role="listbox"]{
-  max-height: 8rem;
+  max-height: 13rem;
   border-radius: 0.125rem;
   border-color: #AEAEAEFF;
   background-color: #3A4254FF;
@@ -1482,6 +1495,10 @@ div[cmdk-item][role="option"]:focus-visible{
   }
 }
 
+div[data-border="true"]{
+  outline-color: #54669DFF;
+}
+
 button[data-action="badge-button-remove"]{
   background-color: transparent;
   color: #EBEBEBFF;
@@ -1503,7 +1520,7 @@ input[cmdk-input][role="combobox"]{
   color: #EBEBEBFF;
 }
 
-div[data-badge="mounted"]{
+div[data-badge="outline"]{
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
@@ -1513,6 +1530,12 @@ div[data-badge="mounted"]{
 .translate-center  {
   transform: translate(-50%, -50%);
   top: 50%;
+  left: 50%;
+}
+
+.translate-center-t40 {
+  transform: translate(-50%, -50%);
+  top: 40%;
   left: 50%;
 }
 
