--- a/src/tw/output.css
+++ b/src/tw/output.css
@@ -704,6 +704,10 @@ video {
   margin-left: auto;
 }
 
+.mr-1{
+  margin-right: 0.25rem;
+}
+
 .mr-2{
   margin-right: 0.5rem;
 }
@@ -714,10 +718,6 @@ video {
 
 .mt-8{
   margin-top: 2rem;
-}
-
-.mr-1{
-  margin-right: 0.25rem;
 }
 
 .flex{
@@ -797,6 +797,14 @@ video {
   width: 1rem;
 }
 
+.w-4\/12{
+  width: 33.333333%;
+}
+
+.w-44{
+  width: 11rem;
+}
+
 .w-72{
   width: 18rem;
 }
@@ -812,6 +820,10 @@ video {
 
 .w-full{
   width: 100%;
+}
+
+.min-w-24{
+  min-width: 6rem;
 }
 
 .min-w-72{
@@ -856,8 +868,17 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.rotate-180{
+  --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .rotate-90{
   --tw-rotate: 90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -991,6 +1012,10 @@ video {
   white-space: nowrap;
 }
 
+.rounded-full{
+  border-radius: 9999px;
+}
+
 .rounded-lg{
   border-radius: 0.5rem;
 }
@@ -1005,10 +1030,6 @@ video {
 
 .rounded-sm{
   border-radius: 0.125rem;
-}
-
-.rounded-full{
-  border-radius: 9999px;
 }
 
 .rounded-br-lg{
@@ -1073,9 +1094,9 @@ video {
   border-color: transparent;
 }
 
-.border-blue-500{
-  --tw-border-opacity: 1;
-  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-black\/80{
@@ -1084,6 +1105,10 @@ video {
 
 .bg-blueish-200{
   background-color: #495778FF;
+}
+
+.bg-blueish-300{
+  background-color: #3A4254FF;
 }
 
 .bg-blueish-400{
@@ -1141,10 +1166,6 @@ video {
 
 .p-6{
   padding: 1.5rem;
-}
-
-.p-\[1px\]{
-  padding: 1px;
 }
 
 .px-2{
@@ -1324,6 +1345,18 @@ video {
   text-decoration-line: underline;
 }
 
+.opacity-0{
+  opacity: 0;
+}
+
+.opacity-100{
+  opacity: 1;
+}
+
+.opacity-40{
+  opacity: 0.4;
+}
+
 .opacity-50{
   opacity: 0.5;
 }
@@ -1340,6 +1373,12 @@ video {
   opacity: 0.05;
 }
 
+.shadow-2xl{
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1349,18 +1388,6 @@ video {
 .shadow-md{
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-2xl{
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-inner{
-  --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1456,10 +1483,17 @@ body {
   min-height : 100vh;
 }
 
-div[data-state="open"][aria-hidden="true"][data-aria-hidden="true"]{
-  background-color: #242424FF;
-  opacity: 0.7;
+/* div[data-state="open"][aria-hidden="true"][data-aria-hidden="true"] {
+  @apply opacity-50;
 }
+
+#add-recipe-dialog{
+  @apply bg-card-500;
+}
+
+#warning-dialog{
+  @apply bg-card-500;
+} */
 
 div[cmdk-list][role="listbox"]{
   max-height: 13rem;
@@ -1857,6 +1891,10 @@ th{
   opacity: 0.5;
 }
 
+.group:hover .group-hover\:opacity-100{
+  opacity: 1;
+}
+
 .peer:disabled ~ .peer-disabled\:cursor-not-allowed{
   cursor: not-allowed;
 }
@@ -1916,6 +1954,11 @@ th{
 
   .hover\:bg-def-400:hover{
     background-color: #343434FF;
+  }
+
+  .hover\:bg-red-600:hover{
+    --tw-bg-opacity: 1;
+    background-color: rgb(220 38 38 / var(--tw-bg-opacity));
   }
 
   .hover\:bg-transparent:hover{
