--- a/src/tw/output.css
+++ b/src/tw/output.css
@@ -720,6 +720,10 @@ video {
   margin-top: 2rem;
 }
 
+.mb-1{
+  margin-bottom: 0.25rem;
+}
+
 .flex{
   display: flex;
 }
@@ -738,6 +742,10 @@ video {
 
 .hidden{
   display: none;
+}
+
+.h-10{
+  height: 2.5rem;
 }
 
 .h-11{
@@ -822,10 +830,6 @@ video {
   width: 100%;
 }
 
-.min-w-24{
-  min-width: 6rem;
-}
-
 .min-w-72{
   min-width: 18rem;
 }
@@ -842,8 +846,20 @@ video {
   min-width: 100%;
 }
 
-.max-w-full{
-  max-width: 100%;
+.max-w-10{
+  max-width: 2.5rem;
+}
+
+.max-w-20{
+  max-width: 5rem;
+}
+
+.max-w-24{
+  max-width: 6rem;
+}
+
+.max-w-28{
+  max-width: 7rem;
 }
 
 .flex-1{
@@ -1008,6 +1024,18 @@ video {
   overflow-y: hidden;
 }
 
+.overflow-ellipsis{
+  text-overflow: ellipsis;
+}
+
+.text-ellipsis{
+  text-overflow: ellipsis;
+}
+
+.text-clip{
+  text-overflow: clip;
+}
+
 .whitespace-nowrap{
   white-space: nowrap;
 }
@@ -1140,6 +1168,10 @@ video {
   background-color: rgb(255 255 255 / 0.1);
 }
 
+.bg-def-400{
+  background-color: #343434FF;
+}
+
 .fill-current{
   fill: currentColor;
 }
@@ -1216,6 +1248,11 @@ video {
 .py-6{
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+
+.px-16{
+  padding-left: 4rem;
+  padding-right: 4rem;
 }
 
 .pe-0{
@@ -1494,6 +1531,10 @@ body {
 #warning-dialog{
   @apply bg-card-500;
 } */
+
+button[data-state="active"]>span#tabs-trigger-active{
+  color: #EBEBEBFF;
+}
 
 div[cmdk-list][role="listbox"]{
   max-height: 13rem;
@@ -1879,6 +1920,21 @@ th{
   --tw-ring-offset-width: 2px;
 }
 
+.focus-visible\:outline-none:focus-visible{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.focus-visible\:ring-2:focus-visible{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus-visible\:ring-offset-2:focus-visible{
+  --tw-ring-offset-width: 2px;
+}
+
 .disabled\:pointer-events-none:disabled{
   pointer-events: none;
 }
@@ -1935,8 +1991,18 @@ th{
   animation: accordion-down 0.1s ease-out;
 }
 
+.data-\[state\=\"active\"\]\:bg-def-500[data-state="active"]{
+  background-color: #242424FF;
+}
+
 .data-\[disabled\]\:opacity-50[data-disabled]{
   opacity: 0.5;
+}
+
+.data-\[state\=active\]\:shadow-sm[data-state=active]{
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 @media (hover: hover){
