--- a/src/tw/output.css
+++ b/src/tw/output.css
@@ -1152,6 +1152,11 @@ video {
   background-color: rgb(255 255 255 / 0.1);
 }
 
+.bg-blueish-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(122 133 187 / var(--tw-bg-opacity));
+}
+
 .fill-current{
   fill: currentColor;
 }
@@ -1483,8 +1488,9 @@ video {
 }
 
 *:focus-visible{
-  outline-color: #54669DFF;
-  --tw-ring-color: #54669DFF;
+  outline-color: #54669D;
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(84 102 157 / var(--tw-ring-opacity));
 }
 
 a {
@@ -1553,7 +1559,7 @@ div[cmdk-item][role="option"]:focus-visible{
 }
 
 div[data-border="true"]{
-  outline-color: #54669DFF;
+  outline-color: #54669D;
 }
 
 button[data-action="badge-button-remove"]{
@@ -1629,7 +1635,8 @@ h3,
 h4,
 h5,
 h6{
-  color: #54669DFF;
+  --tw-text-opacity: 1;
+  color: rgb(84 102 157 / var(--tw-text-opacity));
 }
 
 button {
@@ -1695,7 +1702,8 @@ td {
 
 th{
   border-bottom-width: 2px;
-  border-color: #54669DFF;
+  --tw-border-opacity: 1;
+  border-color: rgb(84 102 157 / var(--tw-border-opacity));
   padding: 15px 7px;
 }
 
@@ -1729,7 +1737,8 @@ th{
   background: 0 0;
   pointer-events: none;
   box-sizing: border-box;
-  color: #7A85BBFF;
+  --tw-text-opacity: 1;
+  color: rgb(122 133 187 / var(--tw-text-opacity));
   box-shadow: 0 0 0 0 currentColor;
   opacity: 0.2;
 }
