--- a/src/tw/output.css
+++ b/src/tw/output.css
@@ -863,6 +863,10 @@ video {
   visibility: hidden;
 }
 
+.collapse{
+  visibility: collapse;
+}
+
 .fixed{
   position: fixed;
 }
@@ -1035,10 +1039,6 @@ video {
   height: 2rem;
 }
 
-.h-96{
-  height: 24rem;
-}
-
 .h-fit{
   height: -moz-fit-content;
   height: fit-content;
@@ -1052,12 +1052,12 @@ video {
   height: 1px;
 }
 
-.max-h-\[300px\]{
-  max-height: 300px;
-}
-
 .max-h-96{
   max-height: 24rem;
+}
+
+.max-h-\[300px\]{
+  max-height: 300px;
 }
 
 .min-h-full{
@@ -1133,6 +1133,10 @@ video {
   flex: 1 1 0%;
 }
 
+.flex-auto{
+  flex: 1 1 auto;
+}
+
 .shrink-0{
   flex-shrink: 0;
 }
@@ -1148,6 +1152,11 @@ video {
 
 .translate-y-\[-50\%\]{
   --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-0{
+  --tw-rotate: 0deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1189,6 +1198,10 @@ video {
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
+}
+
+.resize{
+  resize: both;
 }
 
 .list-none{
@@ -1749,14 +1762,6 @@ video {
   transition-duration: 150ms;
 }
 
-.transition{
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .duration-200{
   transition-duration: 200ms;
 }
@@ -1810,17 +1815,92 @@ body {
   min-height : 100vh;
 }
 
-/* div[data-state="open"][aria-hidden="true"][data-aria-hidden="true"] {
-  @apply opacity-50;
+#root{
+  padding: 0.25rem;
 }
 
-#add-recipe-dialog{
-  @apply bg-card-500;
+@media (min-width: 640px){
+  #root{
+    padding: 1rem;
+  }
 }
 
-#warning-dialog{
-  @apply bg-card-500;
-} */
+@media (min-width: 768px){
+  #root{
+    padding: 2rem;
+  }
+}
+
+#root {
+  /* max-width: 1280px; */
+  margin: 0 auto;
+  text-align: left;
+}
+
+/* */
+
+/* TABLE */
+
+/* */
+
+div[data-is="table"]{
+  min-width: 100%;
+  border-width: 1px;
+  border-color: transparent;
+}
+
+div[data-is="thead"]{
+  min-width: 100%;
+  border-width: 1px;
+  border-color: transparent;
+}
+
+div[data-is="th"]{
+  display: flex;
+  flex: 1 1 auto;
+  border-width: 1px;
+}
+
+div[data-action="trigger-row"]{
+  display: flex;
+  width: 2rem;
+  min-width: 2rem;
+  max-width: 2rem;
+  border-width: 1px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 186 116 / var(--tw-bg-opacity));
+}
+
+div[data-action="select-row"]{
+  display: flex;
+  width: 2.75rem;
+  min-width: 2.75rem;
+  max-width: 2.75rem;
+  border-width: 1px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
+}
+
+div[data-is="tbody"]{
+  border-width: 1px;
+  border-color: transparent;
+}
+
+div[data-is="tr"]{
+  display: flex;
+  min-width: 100%;
+  flex: 1 1 auto;
+  border-width: 1px;
+  border-color: transparent;
+}
+
+div[data-is="td"]{
+  border-width: 1px;
+}
+
+/* */
+
+/* */
 
 button[data-state="active"]>span#tabs-trigger-active{
   color: #EBEBEBFF;
@@ -1892,32 +1972,6 @@ div[data-badge="outline"]{
   background-color: #242424FF;
 }
 
-.translate-center  {
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50%;
-}
-
-.translate-center-t40 {
-  transform: translate(-50%, -50%);
-  top: 40%;
-  left: 50%;
-}
-
-.first-layer {
-  z-index : 9999;
-}
-
-.horizontal {
-  display: flex;
-  flex-direction: row;
-}
-
-.vertical {
-  display: flex;
-  flex-direction: column;
-}
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -1967,51 +2021,41 @@ button.menu {
   color: #e8e8e8;
 }
 
-/* button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-} */
-
-#root{
-  padding: 0.25rem;
-}
-
-@media (min-width: 640px){
-  #root{
-    padding: 1rem;
-  }
-}
-
-@media (min-width: 768px){
-  #root{
-    padding: 2rem;
-  }
-}
-
-#root {
-  /* max-width: 1280px; */
-  margin: 0 auto;
-  text-align: left;
-}
-
-table {
-  width: 100%;
-}
-
-td {
-  padding: 1px 3px;
-}
-
-th{
-  border-bottom-width: 2px;
-  --tw-border-opacity: 1;
-  border-color: rgb(84 102 157 / var(--tw-border-opacity));
-  padding: 15px 7px;
-}
-
 .font-montserrat {
   font-family: "Montserrat", sans-serif;
 }
+
+.translate-center  {
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+}
+
+.translate-center-t40 {
+  transform: translate(-50%, -50%);
+  top: 40%;
+  left: 50%;
+}
+
+.first-layer {
+  z-index : 9999;
+}
+
+.horizontal {
+  display: flex;
+  flex-direction: row;
+}
+
+.vertical {
+  display: flex;
+  flex-direction: column;
+}
+
+/*  */
+
+/* CARD THEME */
+
+/*  */
 
 .card{
   border-radius: 0.5rem;
@@ -2023,8 +2067,6 @@ th{
     0px 0px 0px 1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-
-/*  */
 
 .shadow-inner-shadow-dark-sm {
   --tw-shadow: 0px 1px 0px 0px hsla(0, 0%, 100%, 0.02) inset, 0px 0px 0px 1px hsla(0, 0%, 100%, 0.02) inset,
@@ -2060,7 +2102,11 @@ th{
   transition: box-shadow 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86), opacity 0.35s cubic-bezier(0.78, 0.14, 0.15, 0.86);
 }
 
+/* */
+
 /* CHECKBOX */
+
+/* */
 
 .checkbox-ctn{
   padding-left: 0.75rem;
@@ -2139,7 +2185,11 @@ th{
   transform: rotate(45deg);
 }
 
+/* */
+
 /* LOADER */
+
+/* */
 
 .loader {
   --color: #a5a5b0;
